--- a/index.html
+++ b/index.html
@@ -20,16 +20,9 @@
 
       <!-- Nav Bar -->
       <nav class="navbar bg-light navbar-expand-lg navbar-light">
-        <div class="row">
-          <div class="col-2">
-            <img src="image/crane.png" alt="" width=60px>
-          </div>
-          <div class="col-2">
-            <a class="navbar-brand" href="">
-              <p>&nbsp;D A S H<p>
-            </a>
-          </div>
-        </div>
+        <a href="" class="navbar-brand">
+          <img src="image/dash-logo.png" alt="" width=150px >
+        </a>
 
 
 
