--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
       <!-- Nav Bar -->
       <nav class="navbar bg-light navbar-expand-lg navbar-light">
         <a href="" class="navbar-brand">
-          <img src="image/dash-logo.png" alt="" width=150px >
+          <p>D A S H</p>
         </a>
-
-
-
         <button class="navbar-toggler  ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nac-item">
+            <li class="nac-item active">
               <a class="nav-link" href="">Home</a>
             </li>
             <li class="nav-item">
