created title page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Zen+Dots&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
 <body class='bg-dark'>
+  <div class="">
+    <img src="image/title-image.jpg" alt="" class="title-image" width='1440px'>
+  </div>
   <section id="title">
     <div class="container-fluid">
-
-
-
       <!-- Nav Bar -->
       <nav class="navbar bg-light navbar-expand-lg navbar-light">
         <a href="" class="navbar-brand">
-          <p>D A S H</p>
+          <p> D A S H</p>
         </a>
         <button class="navbar-toggler  ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,10 +31,10 @@
               <a class="nav-link" href="">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">What we do</a>
+              <a class="nav-link" href="">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Shop</a>
+              <a class="nav-link" href="">Service</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Contact</a>
@@ -43,6 +42,17 @@
           </ul>
         </div>
       </nav>
+      <div class="title-container">
+        <div class="row">
+          <div class="col-lg-5 title-heading bg-light">
+            <h1 >Experienced Construction Solution</h1>
+            <p>Questions explained agreeable preferred strangers too him her son. There are many variatios of passages</p>
+          </div>
+        </div>
+      </div>
+
+
+
       <!-- Title -->
     </div>
   </section>
