--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
 <body class='bg-dark'>
   <div class="">
-    <img src="image/title-image.jpg" alt="" class="title-image" width='1440px'>
+    <img src="image/title-image.jpg" alt="" class="title-image" width=1440px>
   </div>
   <section id="title">
     <div class="container-fluid">
@@ -42,14 +42,14 @@
           </ul>
         </div>
       </nav>
-      <div class="title-container">
-        <div class="row">
+
+        <div class="row title-container">
           <div class="col-lg-5 title-heading bg-light">
             <h1 >Experienced Construction Solution</h1>
             <p>Questions explained agreeable preferred strangers too him her son. There are many variatios of passages</p>
           </div>
         </div>
-      </div>
+
 
 
 
