--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
    <body class='bg-dark'>
    <div class="">
-     <img src="image/title-image.jpg" alt="" class="title-image" width='1440px'>
+     <img src="image/title-image.jpg" alt="" class="title-image">
    </div>
    <section id="title">
      <div class="container-fluid">
