--- a/index.html
+++ b/index.html
@@ -1,1 +1,247 @@
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <title>D A S H</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Zen+Dots&display=swap" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800;900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+<body>
+  <div class="">
+    <img src="image/title-image.jpg" alt="" class="title-image">
+  </div>
+
+  <section id="title">
+
+
+    <!-- Nav Bar -->
+    <div class="nav-bar">
+      <table>
+        <tr>
+          <td class="company-column"><a href="#" class="company-name">
+              <h1 class="navbar-brand">D A S H</h1>
+            </a></td>
+          <td class="nav-links-container">
+            <a href="#" class='nav-link'>CONTACT</a>
+            <a href="#pro" class='nav-link'>PROJECTS</a>
+            <a href="#" class='nav-link'>ABOUT</a>
+            <a href="#" class='nav-link'>HOME</a>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+
+    <div class="title-container">
+      <div class="title-row">
+        <div class="title-text">
+          <h1 class="title-heading">WE BUILD THE<br>
+            <div style="font-family: 'Samarkan', sans-serif; font-size: 111px; color: #00adb5;">UNIVERSE</div>
+          </h1>
+          <p>Whether you are looking for material supply or disposal we provide you a cost-efficient solution to ensure your specific project are not only met but exceeded</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Title About-->
+    <div class="about">
+      <img src="image/about.jpg" alt="" class="about-image">
+      <div class="about-text">
+        <h2 class="about-heading">ABOUT US</h2>
+        <p>
+          DASH was formed in 2004 with a vision to innovate the earthmoving equipment hire industry and also changing the construction prototypes and becoming India’s one of the best construction agencies. After nearly 17 years of industry-leading
+          service, DASH now services the wider regions of Banglore, Delhi, and Kolkata – providing ‘The Best Service on India.’ <br><br>Our foundations were built around the customer experience with a key understanding of project scope, operational
+          needs, and unique circumstances. We are dedicated to the constant approval of our services, aiming to provide you with leading earthmoving equipment, Architecture blueprint, control, and construction of projects of all kinds.
+        </p>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- Services -->
+  <div class="services">
+    <div class="services-content">
+      <table>
+        <tr>
+          <td valign="top" class="services-column">
+            <div class="services-text">
+              <h2 class="services-heading">Services we provide</h2>
+              <p>Our mission is to provide world-class services in India. Started from a small space now we are in every corner of the country. We try to build our empire more immortal, more proficient with every single minute. The thing that matters
+                the most is trust and that's what we focus on the most.</p>
+            </div>
+          </td>
+
+          <td>
+            <table>
+              <tr>
+                <td class="services-image">
+                  <img src="image/service1.jpg" alt="" width="400px">
+                </td>
+                <td>
+                  <h2>Hire Equipments</h2>
+                  <p>As one of India's leading construction companies, DASH offers an extensive range of earthmoving machinery and earthmoving equipment available for hire across the country. Our range of earthmoving equipment available for wet hire
+                    includes a dozer, excavator, etc.</p>
+                </td>
+              </tr>
+              <tr>
+                <td class="services-image">
+                  <img src="image/service2.jpg" alt="" width="400px">
+                </td>
+                <td>
+                  <h2>Construction of projects </h2>
+                  <p>We here unite hands in making one of the biggest projects in India and in a very little amount of time we lay a very big foundation.We have made many projects around India and we are known for our precision and honesty toward
+                    work.</p>
+                </td>
+              </tr>
+              <tr>
+                <td class="services-image">
+                  <img src="image/service3.jpg" alt="" width="400px">
+                </td>
+                <td>
+                  <h2>Material Supply</h2>
+                  <p>At DASH we are actively reusing material from one construction site to supply material to another construction site across the East Coast. Our dedicated materials handling and cartage team work hard to provide these services in a
+                    timely and organized manner. Knowing where you can take material for disposal can be confusing, but thanks to our locations in Mumbai,Delhi and kolkata , we’ve amassed a network of over 100 trusted material disposal sites across
+                    the country.</p>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+
+    </div>
+
+  </div>
+
+  <!-- Projects -->
+  <div class="projects" id='pro'>
+    <div class="projects-text">
+      <h2 class="projects-heading">Projects we have done</h2>
+      <p>Some Beautiful artitectural buildings and mansions around the world build by us.</p>
+    </div>
+
+    <div class="project-images">
+      <table>
+        <tr>
+          <td>
+            <img src="image/project1.jpg" alt="" width="98%" class="project-image">
+          </td>
+          <td>
+            <img src="image/project2.jpg" alt="" width="98%" class="project-image">
+          </td>
+          <td>
+            <img src="image/project3.jpg" alt="" width="98%" class="project-image">
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="projects-btn">
+      <!-- Button add krna hai -->
+    </div>
+  </div>
+
+  <!-- Contact Us -->
+  <div class="container">
+    <div class="container">
+      <form action="action_page.php">
+        <div class="row">
+          <div class="col-25">
+            <label for="fname">First Name</label>
+          </div>
+          <div class="col-75">
+            <input type="text" id="fname" name="firstname" placeholder="First name">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="lname">Last Name</label>
+          </div>
+          <div class="col-75">
+            <input type="text" id="lname" name="lastname" placeholder="Last name">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="country">Country</label>
+          </div>
+          <div class="col-75">
+            <select id="country" name="country">
+              <option value="India">India</option>
+              <option value="canada">Canada</option>
+              <option value="usa">USA</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="subject">Message</label>
+          </div>
+          <div class="col-75">
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <input type="submit" value="Submit" class="btn">
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer-distributed">
+
+    <div class="footer-left">
+
+      <h3><span>D A S H</span></h3>
+
+      <p class="footer-links">
+        <a href="#">Home</a>
+        |
+        <a href="#">About</a>
+        |
+        <a href="#">Projects</a>
+        |
+        <a href="#">Contact</a>
+      </p>
+
+      <p class="footer-company-name">©2004 D A S H Pvt. Ltd.</p>
+    </div>
+
+    <div class="footer-center">
+      <div>
+
+        <p><span><i class="fa fa-map-marker"></i>43 , Jai Gopal Indl Estate, B S X Road, Dadar(w)
+            Mumbai,Maharsahtra - 400028</p>
+      </div>
+
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>+91 95698 20823</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="mailto:dixitkumawat09@gmail.com">support@dash.com</a></p>
+      </div>
+    </div>
+    <div class="footer-right">
+      <p class="footer-company-about">
+        <span>About the company</span>
+        We have made many projects around India and we are known for our precision and honesty toward work.
+      </p>
+      <div class="footer-icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
